hphp/test/slow/compilation/1263.php.expectf
Fatal error: You cannot decorate this argument as inout in %s/compilation/1263.php on line 9
